<resources>
    <string name="app_name">刷脸登录-EyeKey</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>

    <string name="string_home_page">首页</string>
    <string name="settings">设置</string>
    <string name="account_manager">账号管理</string>

    <string name="logout">退出登陆</string>
    <string name="not_login">您还未登陆</string>
    <string name="login">登陆</string>
    <string name="account">用户名</string>
    <string name="password">密码</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <string name="string_lock_type">解锁方式</string>
    <string name="string_gesture_password_lock">手势密码锁定</string>
    <string name="string_face_password_lock">脸部识别开锁</string>

    <string name="reload">重新加载</string>
    <string name="login_before_option">请先登录!</string>
    <string name="loading_failed_tag">请检查您的手机是否联网，点击按钮重新加载</string>
    <string name="loading_failed">数据加载失败</string>
    <string name="no_account">没有账号?点击注册</string>
    <string name="input_account_login">输入账号密码登陆</string>
    <string name="login_success">登陆成功</string>
    <string name="not_login_info">登陆之后才能访问更多信息...</string>
    <string name="change_gesture_password">修改手势密码</string>
    <string name="test_face_rec">识别测试</string>
    <string name="change_face_password">清空脸部数据</string>
    <string name="set_gesture_password">对手势密码进行设置,向右滑动取消</string>
    <string name="set_face_password">对脸部检测进行设置,向右滑动取消</string>
    <string name="gesture_password_lock">手势密码锁定</string>
    <string name="face_password_lock">脸部识别开锁</string>
    <string name="close">关闭</string>
    <string name="open">开启</string>
    <string name="string_detect_prompt">请把脸放到扫描框中...</string>

    <string name="string_draw_gesture_password">请绘制手势密码</string>
    <string name="string_try_times">5次失败后，需要重新登录。</string>
    <string name="string_try_max">您已5次输错密码，请30秒后再试</string>
    <string name="string_left_times">密码错误，还可以再输入%d次</string>
    <string name="string_retry_timeout">%d 秒后重试</string>
    <string name="forget_password">忘记密码?</string>
    <string name="string_confirm_forget_gesture_password">忘记手势密码需要重新登录,您确定忘记了吗?</string>

    <string name="face_progress_1">识别成功,为检测更准确,需要更多的数据.点击继续</string>
    <string name="face_progress_2">识别成功,还差最后一步了(如果你戴眼镜,请取下眼镜),点击继续</string>

    <string name="verify_success">脸部识别解锁成功</string>
    <string name="verify_failed">识别失败,点击重试</string>

    <string name="welcome">欢迎你：%s</string>
</resources>
