<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gesturepwd_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/gesture_background"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/gesturepwd_unlock_face"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/card_avatar"
        android:padding="4.0dip"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/gesturepwd_unlock_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:shadowColor="#b3ffffff"
        android:shadowRadius="1.0"
        android:text="@string/string_draw_gesture_password"
        android:textColor="@android:color/white"
        android:textSize="16.0sp" />


    <TextView
        android:id="@+id/gesturepwd_unlock_failtip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:shadowColor="#b3ffffff"
        android:shadowRadius="1.0"
        android:text="@string/string_try_times"
        android:textColor="@android:color/white"
        android:textSize="12.0sp"
        android:visibility="invisible" />


    <com.jin.gesturepassword.widget.LockPatternView
        android:id="@+id/gesturepwd_unlock_lockview"
        android:layout_width="280.0dip"
        android:layout_height="280.0dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0.0dip" />


    <TextView
        android:id="@+id/gesturepwd_unlock_forget"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:shadowColor="#e0ffffff"
        android:shadowDy="1.0"
        android:shadowRadius="1.0"
        android:text="@string/forget_password"
        android:textColor="@android:color/white"
        android:textSize="14.0sp" />


</LinearLayout>